--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "illuminate/pagination": "^5.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "illuminate/html": "~5.0"
+        "laravelcollective/html": "^5.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
